# four-word-networking

./: .gitignore  3_word_analysis.md  3word.md  BALANCED_ENCODING_COMPLETE.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  COLLISION_RESISTANCE_UPDATE.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_UPDATE_SUMMARY.md  EXPERIMENTAL_MODULES_PLAN.md  GOLD_WORDLIST.txt  GOLD_WORDS.txt  IMPLEMENTATION_STATUS.md  IPv6_COMPRESSION_ANALYSIS.md  LICENSE-APACHE  LICENSE-MIT  README.md  TEST_SUITE_GUIDE.md  UNIVERSAL_WORD_ENCODING_SPEC.md  UPGRADE_SUMMARY.md  alpha_wordlist.txt  clean_aliases.txt  common_words.txt  create_16k_wordlist.py  create_all_readable_dictionary.py  create_best_readable_dictionary.py  create_final_dictionary.py  create_final_readable_dictionary.py  create_readable_dictionary.py  create_truly_readable_dictionary.py  debug_compression.py  debug_link_local  debug_link_local.rs  fix_dictionary_duplicates.py  generate_words.js  hello.py  human_readable_aliases.txt  letter_wordlist_generator.py  (+32 more)
.cargo/: config.toml
.github/workflows/: comprehensive_tests.yml
analysis/: README.md  character_analysis.py  comprehensive_summary.py  run_all_analyses.sh  security_comparison.py  visualization_histogram.py  word_length_distribution.py
benches/: encoding_benchmarks.rs
data/: common-words-frequency.csv  copy_readable_to_human.sh  frequency_based_word_list_65k.txt  human_readable_word_list_65k.txt  my_word_list_with_suffixes.txt  wordlist_16384.txt  wordlist_16384_clean.txt  wordlist_16384_common.txt  wordlist_16384_reordered.txt  wordlist_8192_quality.txt  words_alpha.txt.html
data/claude_filtering/: stage_medium_iter_2.txt
data/words_research/: all_readable_word_list_65k.txt  best_readable_word_list_65k.txt  claude_filtered_words.txt  clean_frequency_list.py  cleaned_frequency_list.txt  compare_dictionaries.py  dictionary_comparison.txt  dictionary_quality_report.txt  everyday_frequency_word_list_65k.txt  filter_with_claude.py  final_ascii_cleanup.py  final_readable_word_list_65k.txt  fix_dictionary_count.py  google_based_word_list_65k.txt  high_value_missing_forms.txt  human_readable_word_list_65k.txt.backup  improved_word_list_65k.txt  natural_readable_word_list_65k.txt  proper_frequency_word_list_65k.txt  remove_non_ascii_words.py  replace_non_ascii_chars.py  simulated_frequency_word_list_65k.txt  truly_readable_word_list_65k.txt  verify_dictionary_quality.py
docs/: IP_ENCODING_ANALYSIS.md  bit_requirements_analysis.md
examples/: 16k_demo.rs  16k_demo.rs.disabled  balanced_demo.rs  ip_port_encoding.rs  ip_port_encoding.rs.disabled
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_comprehensive.rs  fuzz_decoding.rs  fuzz_dictionary.rs  fuzz_encoding.rs
proptest-regressions/: property_tests.txt
scripts/: create_wordlist.py  download_hf_dataset.py  download_wordlists.sh  filter_words.py  fix_dictionary_size.py  run_comprehensive_tests.sh  use_clean_aliases.py  validate_dictionary.py  verify_readability.py
src/: adaptive_encoder.rs  api.rs  balanced_encoder.rs  compressed_encoder.rs  compression.rs  dictionary16k.rs  dictionary4k.rs  dictionary65k.rs  encoder16k.rs  error.rs  four_word_adaptive_encoder.rs  four_word_encoder.rs  four_word_ipv6_encoder.rs  ip_port_encoder.rs  ip_port_encoder_v2.rs  ipv4_perfect_codec.rs  ipv6_compression.rs  ipv6_multi_dimensional.rs  ipv6_pattern_feistel.rs  ipv6_perfect_codec.rs  ipv6_perfect_encoder.rs  ipv6_perfect_patterns.rs  lib.rs  main.rs  multiaddr_parser.rs  perfect_adaptive_encoder.rs  perfect_encoder.rs  property_tests.rs  pure_ip_compression.rs  semantic.rs  simple_adaptive_encoder.rs  simple_perfect_encoder.rs  three_word_adaptive_encoder.rs  three_word_encoder.rs  three_word_ipv6_encoder.rs  ultra_compact_encoder.rs  ultra_compression.rs  unified_three_word_encoder.rs  universal_encoder.rs  universal_ip_compression.rs  (+2 more)
src/universal/: demo_tests.rs  dictionaries.rs  encoder.rs  error.rs  exhaustive_tests.rs  fast_exhaustive_tests.rs  fractal.rs  holographic.rs  mod.rs  simple.rs  (+2 more)
test/: BIG_LIST.txt  BIG_SORTED_LIST.txt  BIG_SORTED_LIST_65K.txt  BIG_SORTED_LIST_EXPANDED.txt  alpha_wordlist2.txt  big_clean_list.txt  common_sorted.txt  common_words.txt  dave  lower_Case.py  me.txt  norvig.py  out_new_gold.txt  output.txt  places.txt  places_unique.txt  processed_wordlist.txt  sorted.txt  wordlist_4096.txt  words_by_grok.txt  xai.py
tests/: cli_integration_tests.rs  dictionary_thread_safety.rs  integration_tests.rs  ip_port_encoder_tests.rs  property_tests.proptest-regressions  property_tests.rs  test_config.rs  ula_comprehensive_tests.rs  utf8_edge_cases_test.rs
wordlists/: supplementary.txt
