[workspace]

[package]
name = "three-word-networking"
version = "1.0.0"
edition = "2021"
authors = ["David Irvine <david.irvine@autonomi.com>"]
description = "Convert IP addresses to memorable words. IPv4 = 3 words, IPv6 = 4-6 words. Always."
license = "MIT OR Apache-2.0"
repository = "https://github.com/dirvine/three-word-networking"
readme = "README.md"
keywords = ["networking", "ip-address", "human-readable", "encoding", "cli"]
categories = ["network-programming", "command-line-utilities"]
exclude = ["src/bin/debug_*", "src/bin/test_*", "*.disabled"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
hex = "0.4"
bs58 = "0.5"
bitvec = "1.0"

[dev-dependencies]
tokio-test = "0.4"
hex = "0.4"
bs58 = "0.5"
rand = "0.8"
sha2 = "0.10"

[[bin]]
name = "three-word-networking"
path = "src/main.rs"

[[bin]]
name = "3wn"
path = "src/bin/3wn.rs"


[lib]
name = "three_word_networking"
path = "src/lib.rs"