[workspace]

[package]
name = "four-word-networking"
version = "1.1.0"
edition = "2021"
authors = ["David Irvine <david.irvine@autonomi.com>"]
description = "Convert IP addresses to memorable words. IPv4 = 4 words (perfect), IPv6 = 4-6 words (adaptive). Always reversible."
license = "MIT OR Apache-2.0"
repository = "https://github.com/dirvine/four-word-networking"
readme = "README.md"
keywords = ["networking", "ip-address", "human-readable", "encoding", "cli"]
categories = ["network-programming", "command-line-utilities"]
exclude = ["src/bin/debug_*", "src/bin/test_*", "*.disabled"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
hex = "0.4"
bs58 = "0.5"
bitvec = "1.0"

[dev-dependencies]
tokio-test = "0.4"
hex = "0.4"
bs58 = "0.5"
rand = "0.8"
sha2 = "0.10"

[[bin]]
name = "four-word-networking"
path = "src/main.rs"

[[bin]]
name = "4wn"
path = "src/bin/4wn.rs"


[lib]
name = "four_word_networking"
path = "src/lib.rs"