[package]
name = "four-word-networking-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.four-word-networking]
path = ".."

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_encoding"
path = "fuzz_targets/fuzz_encoding.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_decoding"
path = "fuzz_targets/fuzz_decoding.rs"
test = false
doc = false
bench = false
